storing hash instead of a secret answer